Update and rename 2017-04-09.gyulolet-hete.markdown to 2017-04-09.magyarorszag-husvetja.markdown

--- a/_posts/blog/2017-04-09.magyarorszag-husvetja.markdown
+++ b/_posts/blog/2017-04-09.magyarorszag-husvetja.markdown
@@ -1,15 +1,16 @@
 ---
 layout: post
-title: Tapasztalatok a gyűlölet hetén, Húsvét előtt
+title: Magyarország Húsvétja - quo vadis, Patria mea?
 date: 2017-04-09 9:00:18.000000000 +00:00
 author: agoston_laszlo
-excerpt: "A keresztény Magyarország a Húsvétet ünnepli és közben számolatlanul küldi a saját fiait a Golgotára - mi pedig megannyi Jézusként siratjuk a vesztébe rohanó Jeruzsálemet. Fáj, hogy ebből a sorból is sokan a gondolat helyett csak blaszfémiát látnak majd..."
+excerpt: "A keresztény Magyarország a Húsvétot ünnepli és közben számolatlanul küldi a saját fiait a Golgotára - mi pedig megannyi Jézusként siratjuk a vesztébe rohanó Jeruzsálemet. Fáj, hogy ebből a sorból is sokan a gondolat helyett csak blaszfémiát látnak majd..."
 categories: blog
 tags: [rólam]
 image: http://agostonlaszlo.hu/images/1m.jpg
 lang: hu
 ---
-*- Kit engedjek inkább szabadon? A Názáreti Jézust vagy Barabást, a gyilkost?
+*És szóla Pilátus:
+- Kit engedjek inkább szabadon? A Názáreti Jézust vagy Barabást, a gyilkost?
 - Barabást!*
 
 Na, ki merjem tenni? Három "basszátok meg" van benne... a hallgatóságom egyharmada semmi mást nem fog meghallani belőle... merjem vállalni névvel és arccal, hogy kimondom: Magyarországon nincsen demokrácia? Ülök a gép előtt, az ujjam az enteren. Aludjunk rá egyet reggelig! 
@@ -42,6 +43,6 @@ Neves operaénekesek tagadtak meg, nyilvánosan álltak ki ellenem a Facebookon,
 
 Tudom, Soros fizet minden soromért. Miért nem tudod elképzelni, hogy valakinek önállóan is vannak gondolatai? Magadból indulsz ki? Neked fizetnek? Nem értem...
 
-A keresztény Magyarország a Húsvétet ünnepli és közben számolatlanul küldi a saját fiait a Golgotára - mi pedig megannyi Jézusként siratjuk a vesztébe rohanó Jeruzsálemet. Fáj, hogy ebből a sorból is sokan a gondolat helyett csak blaszfémiát látnak majd...
+A keresztény Magyarország a Húsvétot ünnepli és közben számolatlanul küldi a saját fiait a Golgotára - mi pedig megannyi Jézusként siratjuk a vesztébe rohanó Jeruzsálemet. Fáj, hogy ebből a sorból is sokan a gondolat helyett csak blaszfémiát látnak majd...
 
 Örülök, hogy egymilliónál is többen látták ezt a videót. Sok olyan konfliktust generált, amelyben porral törve hullottak le az életemről emberek, mint metszéskor a száraz gallyak. Ez vagyok én, ecce homo! Jézus nem vagyok, de kellett ez a videó, hogy Barabássá se legyek...
